@@ -14,6 +14,12 @@
 #
 #---------------------------------------------
 
+examples()
+{
+cat << _EXAMPLES
+_EXAMPLES
+}
+
 usage()
 {
 cat << _USAGE
